{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 60,
  "lineage": "fb30dee6-7c10-c792-b52c-0adc7f41325e",
  "resources": [
    {
      "module": "module.nsg01",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/mahesh-ss7/providers/Microsoft.Network/networkSecurityGroups/ss7nsg",
            "location": "westeurope",
            "name": "ss7nsg",
            "resource_group_name": "mahesh-ss7",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resoucegroup01.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg02",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/nhy/providers/Microsoft.Network/networkSecurityGroups/nhynsg",
            "location": "eastus",
            "name": "nhynsg",
            "resource_group_name": "nhy",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resoucegroup02.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg03",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/MAi/providers/Microsoft.Network/networkSecurityGroups/mainsg",
            "location": "westeurope",
            "name": "mainsg",
            "resource_group_name": "MAi",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    },
    {
      "module": "module.subnet01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "12.0.1.0/24",
            "address_prefixes": [
              "12.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/nhy/providers/Microsoft.Network/virtualNetworks/nhyvnet02/subnets/nhysubnet01",
            "name": "nhysubnet01",
            "resource_group_name": "nhy",
            "virtual_network_name": "nhyvnet02"
          },
          "dependencies": [
            "module.resoucegroup02.azurerm_resource_group.rg",
            "module.vnet03.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet02",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/mahesh-ss7/providers/Microsoft.Network/virtualNetworks/ss7vnet01/subnets/ss7subnet02",
            "name": "ss7subnet02",
            "resource_group_name": "mahesh-ss7",
            "virtual_network_name": "ss7vnet01"
          },
          "dependencies": [
            "module.resoucegroup01.azurerm_resource_group.rg",
            "module.vnet01.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet03",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/mahesh-ss7/providers/Microsoft.Network/virtualNetworks/ss7vnet01/subnets/ss7subnet03",
            "name": "ss7subnet03",
            "resource_group_name": "mahesh-ss7",
            "virtual_network_name": "ss7vnet01"
          },
          "dependencies": [
            "module.resoucegroup01.azurerm_resource_group.rg",
            "module.vnet01.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet04",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "18.0.2.0/24",
            "address_prefixes": [
              "18.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/MAi/providers/Microsoft.Network/virtualNetworks/MAivnet02/subnets/maisubnet04",
            "name": "maisubnet04",
            "resource_group_name": "MAi",
            "virtual_network_name": "MAivnet02"
          },
          "dependencies": [
            "data.azurerm_resource_group.existing",
            "module.vnet04.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "7a26d69b-f806-4989-9385-0b63af9b76ea",
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/mahesh-ss7/providers/Microsoft.Network/virtualNetworks/ss7vnet01",
            "location": "westus",
            "name": "ss7vnet01",
            "resource_group_name": "mahesh-ss7",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resoucegroup01.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet02",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "11.0.0.0/16"
            ],
            "guid": "c92efc03-6bc5-4ef9-97bb-854c37153d28",
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/mahesh-ss7/providers/Microsoft.Network/virtualNetworks/ss7vnet02",
            "location": "eastus2",
            "name": "ss7vnet02",
            "resource_group_name": "mahesh-ss7",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resoucegroup01.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet03",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "12.0.0.0/16"
            ],
            "guid": "db8bc43e-f07b-4e3e-9e62-d43ad8b4df05",
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/nhy/providers/Microsoft.Network/virtualNetworks/nhyvnet02",
            "location": "eastus",
            "name": "nhyvnet02",
            "resource_group_name": "nhy",
            "subnet": [
              {
                "address_prefix": "12.0.1.0/24",
                "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/nhy/providers/Microsoft.Network/virtualNetworks/nhyvnet02/subnets/nhysubnet01",
                "name": "nhysubnet01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resoucegroup02.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet04",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "18.0.0.0/16"
            ],
            "guid": "d75953a1-4aac-45f0-8b92-35bbe355897a",
            "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/MAi/providers/Microsoft.Network/virtualNetworks/MAivnet02",
            "location": "westeurope",
            "name": "MAivnet02",
            "resource_group_name": "MAi",
            "subnet": [
              {
                "address_prefix": "18.0.2.0/24",
                "id": "/subscriptions/6b077492-6d1b-41b5-b98a-1ad5f427ee98/resourceGroups/MAi/providers/Microsoft.Network/virtualNetworks/MAivnet02/subnets/maisubnet04",
                "name": "maisubnet04"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "data.azurerm_resource_group.existing"
          ]
        }
      ]
    }
  ]
}